--- a/hello/pages/templates/agents.html
+++ b/hello/pages/templates/agents.html
@@ -17,7 +17,7 @@
             <th>Name</th>
            <th>brand</th>
            <th>service</th>
-           <th>email</th>
+
           <th>Description</th>
             <th>Address</th>
            <th>Date</th>
@@ -33,14 +33,13 @@
             <th>{{i.name}}</th>
 <th>{{i.brand}}</th>
         <th>{{i.service}}</th>
-               <th>{{i.email}}</th>
         <th>{{i.des}}</th>
         <th>{{i.address}}</th>
         <th>{{i.date}}</th>
         <th>{{i.time}}</th>
         <th><input type="text" name="newotp" maxlength="4"></th>
         <th>{{i.status}}</th>
-        <th><button type="submit" class="btn btn-primary" name="otp" value="{{i.otp}}" >Primary</button></th>
+        <th><button type="submit" class="btn btn-primary" name="otp" value="{{i.otp}}" >submit</button></th>
 <!--           -->
 
       </tr>
