--- a/hello/pages/templates/cancel.html
+++ b/hello/pages/templates/cancel.html
@@ -86,7 +86,7 @@ span.psw {
 <body>
 {{par|safe}}
   <form action="{% url 'cancelsub' %}" method="post">{% csrf_token %}
-  <div><h3 style="text-align:center; " >Login</h3></div>
+  <div><h3 style="text-align:center; " >Cancel Booking</h3></div>
   <div class="container">
     <label for="uname"><b>Username</b></label>
     <input type="text" placeholder="Enter Username" name="uname" required>
@@ -103,10 +103,7 @@ span.psw {
 
   </div>
 
-  <div class="container" style="background-color:#f1f1f1">
-    <button type="button" class="cancelbtn">Cancel</button>
-    <span class="psw"> <a href="#">Forgot password?</a></span>
-  </div>
+
   <script src="https://apis.google.com/js/platform.js" async defer></script>
 </form>
 </body>
