--- a/hello/pages/templates/mob.html
+++ b/hello/pages/templates/mob.html
@@ -105,7 +105,7 @@
   <option value="samsung">samsung</option>
 
   </select>
-            <button type="submit" class="btn btn-success">Success</button>
+            <button type="submit" class="btn btn-success">Next</button>
 </form>
 
 
