--- a/hello/pages/static/cctv/style.css
+++ b/hello/pages/static/cctv/style.css
@@ -2,7 +2,7 @@
     
   
     /*  background-color: aquamarine; */
-      background-image: url('img/mobile.jpg');
+      background-image: url('cctv.jpg');
       background-size: 100% 100%;
     
       width: 100%;
@@ -49,7 +49,7 @@
   /*button top*/
   .wrap { 
     
-    height: 100%;
+    height: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
