--- a/hello/pages/templates/last.html
+++ b/hello/pages/templates/last.html
@@ -85,11 +85,11 @@ width:400px;
 
 <form action="{% url 'last_submission' %}" method="POST">{% csrf_token %}
   <div class="container" style="width: 30rem;">
-    <h3> Fill following details</h3>
+      <h2> Hii {% if name %}{{name}}{% endif %}</h2><h3> Fill following details..</h3>
 
     <hr>
     <label for="Address"><b>Address</b></label>
-    <textarea rows="1" placeholder="Enter your permanent Address" name="Address" required>  {% if address %} {{address}} {% endif %}</textarea>
+    <textarea rows="1" placeholder="Enter your permanent Address" name="Address" required>{% if address %}{{address}}{% endif %}</textarea>
     <label for="Description"><b>Description</b></label>
     <input type="text" placeholder="Write in brief about the problem in your {{address}} device" name="Description" required>
    <label for="email"><b>Email</b></label>
@@ -98,9 +98,10 @@ width:400px;
     <input type="Date" id="Date1" name="Date" required>
 
 
-      <label for="service"><b>Choose a service provider for your work</b></label>
+      <label for="service"><b>Choose a service provider for your work (if any)</b></label>
     <br>
     <select class="sty" name="dropdown">
+        <option value="ravi">-------</option>
     <option value="ravi">Ravi Hirave</option>
     <option value="dipak">Dipak Gautam</option>
     <option value="rishi">Rushi Deshmukh</option>
