--- a/hello/pages/templates/ac.html
+++ b/hello/pages/templates/ac.html
@@ -91,6 +91,7 @@
 	<div class="modal-contents">
 
 		<div class="close">+</div>
+         <div style="padding-top:110px;">
 		<form action="{% url 'register' %}" method="post">
 {% csrf_token %}
 <select name="dropdown">
@@ -102,6 +103,7 @@
   </select>
             <button type="submit" class="btn btn-success">Success</button>
 </form>
+         </div>
 
 
 
