--- a/hello/pages/templates/cancel.html
+++ b/hello/pages/templates/cancel.html
@@ -92,12 +92,13 @@ span.psw {
     <input type="text" placeholder="Enter Username" name="uname" required>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <div><input type="password" placeholder="Enter Password" name="psw" required></div>
 
-       <label for="otp"><b>OTP</b></label>
-    <input type="text" placeholder="Enter OTP for cancellation" maxlength="4"  name="otp" required>
+    <div style="margin:4px;"><label for="otp"><b>OTP</b></label></div>
+    <input type="number" placeholder="Enter OTP for cancellation" maxlength="4" style="width:50%; height:50% ;line-height:2px"  name="otp" required>
+    <br><br>
 
-       <label for="reason"><b>reason</b></label>
+       <label for="reason"><b>Reason</b></label>
     <input type="text" placeholder="Enter reason for cancellation" name="reason" required>
     <button type="submit" name="service" value={{service}}>cancel booking </button>
 
