--- a/hello/pages/templates/paint.html
+++ b/hello/pages/templates/paint.html
@@ -91,6 +91,7 @@
 	<div class="modal-contents">
 
 		<div class="close">+</div>
+         <div style="padding-top:110px;">
 		<form action="{% url 'register' %}" method="post">
 {% csrf_token %}
 <select name="dropdown">
@@ -102,7 +103,7 @@
             <button type="submit" class="btn btn-success">Submit</button>
 </form>
 
-
+         </div>
 
 <script>document.getElementById('button').addEventListener("click", function() {
 	document.querySelector('.bg-modal').style.display = "flex";
